--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,6 @@ body {
 	flex-direction: column;
 	position: fixed;
 	right: 60px;
-	bottom: 60px;
 	text-align: right;
 	font-size: 32px;
 }
@@ -62,9 +61,14 @@ body {
 	.copyright_menu {
 		display: none;
 	}
+
+	.mob_menu {
+		display: none;
+	}
+
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 850px) {
 
 	#container {
 		margin: 30px;
@@ -74,9 +78,13 @@ body {
 		right: 30px;
 	}
 
+	button {
+		width: 100%;
+	}
+
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
 
 	#container {
 		margin: 0 auto;
@@ -85,6 +93,13 @@ body {
 
 	#menu {
 		display: none;
+	}
+
+	.mob_menu {
+		display: block;
+		float: right;
+		vertical-align: middle;
+		font-size: 40px;
 	}
 
 	.copyright_menu {
@@ -124,6 +139,16 @@ p, ul {
 	margin: -10px 0 40px 0;
 }
 
+.tag {
+	display: inline;
+	padding: 5px 15px;
+	text-transform: uppercase;
+	font-size: 12px;
+	background-color: #ddd;
+	margin-right: 5px;
+	font-weight: bold;
+}
+
 a {
 	color: #2b86e1;
 	cursor: pointer;
@@ -133,6 +158,14 @@ a {
 a:hover {
 	background-color: #2b86e1;
 	color: #fff;
+}
+
+strong {
+	font-weight: 700;
+}
+
+em {
+	font-style: italic;
 }
 
 ul {
@@ -154,6 +187,7 @@ button {
 button:hover {
 	background-color: #686868;
 	border: 3px solid #686868;
+	box-shadow: 0 0 10px rgba(0,0,0,0.1);
 	color: #fff;
 	outline: none;
 }
@@ -162,6 +196,7 @@ button:hover {
 	background-color: #fff;
 	border: 3px solid #0277b5;
 	color: #0277b5;
+	margin-bottom: -10px;
 }
 
 .linkedin:hover {
@@ -172,6 +207,15 @@ button:hover {
 
 img {
 	width: 100%;
+	box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+
+.fa {
+	margin-right: 10px;
+}
+
+.fa-long-arrow-right {
+	margin: 0 0 0 10px;
 }
 
 .overlay {
