--- a/styles.css
+++ b/styles.css
@@ -62,10 +62,6 @@ body {
 		display: none;
 	}
 
-	.mob_menu {
-		display: none;
-	}
-
 }
 
 @media screen and (max-width: 850px) {
@@ -93,13 +89,6 @@ body {
 
 	#menu {
 		display: none;
-	}
-
-	.mob_menu {
-		display: block;
-		float: right;
-		vertical-align: middle;
-		font-size: 40px;
 	}
 
 	.copyright_menu {
@@ -168,8 +157,18 @@ em {
 	font-style: italic;
 }
 
-ul {
+img {
+	width: 100%;
+	box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
 
+hr {
+	border-top: 1px solid #ccc;
+	border-left: 0;
+	border-right: 0;
+	border-bottom: 0;
+	outline: none;
+	margin: 60px 0;
 }
 
 button {
@@ -203,11 +202,6 @@ button:hover {
 	background-color: #0277b5;
 	border: 3px solid #0277b5;
 	color: #fff;
-}
-
-img {
-	width: 100%;
-	box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
 
 .fa {
